<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">LockMoney</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>



<!--    <string name="lbl_30">30%</string>-->
<!--    <string name="lbl_12_000_000">12.000.000</string>-->
<!--    <string name="lbl_50">50%</string>-->

<!--    <string name="lbl_6_000_000">- 6.000.000đ</string>-->
<!--    <string name="lbl_th_ng_10">Tháng 10</string>-->
<!--    <string name="lbl_5">5%</string>-->

<!--    <string name="lbl_600_000">- 600.000đ</string>-->
<!--    <string name="lbl_15">15%</string>-->
<!--    <string name="lbl_2023">2023</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="thongke">Thống kê</string>
    <string name="doan">Đồ ăn</string>
    <string name="cuahang">Cửa hàng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="xacnhan">XÁC NHẬN</string>
    <string name="dichuyen">Di chuyển</string>
    <string name="dangky">ĐĂNG KÍ</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="tongtien">Tổng tiền</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="thang">Tháng</string>

    <string name="dangxuat">Đăng xuất</string>

    <string name="a_account_qltk">Quản lý tài khoản</string>
    <string name="a_account_qlnd">Tài khoản người dùng:</string>
    <string name="a_account_tnd">Tên người dùng:</string>
    <string name="a_account_ktk">Khóa tài khoản:</string>
    <string name="a_account_tim">TÌM</string>
    <string name="a_account_xoa">XÓA</string>


    <string name="a_admin_qldm">QUẢN LÝ DANH MỤC</string>
    <string name="a_admin_qltk">QUẢN LÝ TÀI KHOẢN</string>
    <string name="a_admin_tkct">THỐNG KÊ CHI TIÊU</string>

    <string name="a_categpry_qldm">Quản lý danh mục</string>
    <string name="a_categpry_pl">Phân loại:</string>
    <string name="a_categpry_ct">Chi tiêu</string>
    <string name="a_categpry_tn">Thu nhập</string>
    <string name="a_categpry_tdm">Tên danh mục:</string>
    <string name="a_categpry_cadm">Chọn ảnh danh mục:</string>
    <string name="a_categpry_them">THÊM</string>
    <string name="a_categpry_sua">SỬA</string>
    <string name="a_categpry_xoa">XÓA</string>

    <string name="a_expense_bcct">Báo cáo chi tiêu</string>
    <string name="a_expense_tt">Tiền thu</string>
    <string name="a_expense_tc">Tiền chi</string>
    <string name="a_expense_tong">Tổng</string>



    <string name="a_login_nttk">Nhập tên tài khoản:</string>
    <string name="a_login_nmk">Nhập mật khẩu:</string>
    <string name="a_login_qmk">Quên mật khẩu?</string>



    <string name="a_signup_ntnd">Nhập tên người dùng:</string>
    <string name="a_signup_ne">Nhập email:</string>
    <string name="a_signup_nlmk">Nhập lại mật khẩu:</string>


    <string name="f_goals_dgh">Đặt giới hạn</string>
    <string name="f_goals_nghct">Nhập giới hạn chi tiêu:</string>
    <string name="f_goals_cdm">Chọn danh mục:</string>
    <string name="f_goals_ct">Chọn tháng:</string>
    <string name="f_goals_mvgh">Mức vượt giới hạn:</string>
    <string name="f_goals_dtb">Đặt thông báo:</string>


    <string name="f_home_xc">Xin chào,</string>
    <string name="f_home_dsct">Danh sách chi tiêu</string>
    <string name="f_home_ngay20">Ngày 20</string>
    <string name="f_home_ngay19">Ngày 19</string>
    <string name="f_home_ngay18">Ngày 18</string>
    <string name="f_home_ngay17">Ngày 17</string>


    <string name="f_settings_cd">Cài đặt</string>
    <string name="f_settings_vct">VỀ CHÚNG TÔI</string>
    <string name="f_settings_nn">TIẾNG ANH</string>
    <string name="f_settings_tg">TRỢ GIÚP</string>



    <string name="f_statistic_xct">Xem chi tiết</string>
    <string name="f_statistic_pttc">Phân tích thu chi:  </string>
    <string name="f_statistic_ldl">Lấy số liệu từ 4 danh mục chính</string>



    <string name="f_write_tdl">Thêm dữ liệu</string>
    <string name="f_write_ntn">Ngày/tháng/năm:</string>
    <string name="f_write_nst">Nhập số tiền:</string>
    <string name="f_write_nd">Nội dung</string>


    <string name="item_10gd">10 giao dịch</string>

    <string name="s_affter_tttk">Thông tin tài khoản</string>



</resources>
