<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5F5"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <RelativeLayout
        android:id="@+id/topAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1032DE"
        android:gravity="center_horizontal"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        app:layout_constraintBottom_toTopOf="@+id/mainAdd">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_settings_cd"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txvSignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/dangky"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txvLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/dangnhap"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txvAbout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/f_settings_vct"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/f_settings_nn"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

<!--        <Spinner-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="45dp"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_marginRight="5dp"-->
<!--            android:background="@drawable/block_spinner_language"-->
<!--            android:dropDownWidth="150dp"-->
<!--            android:dropDownVerticalOffset="40dp"-->
<!--            android:entries="@array/language"-->
<!--            android:paddingLeft="30dp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="25sp"-->
<!--            android:textStyle="bold" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/f_settings_tg"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />


</LinearLayout>
