<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5F5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#1032DE"
        android:paddingTop="20dp"
        android:text="@string/f_settings_cd"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:weightSum="2"
        android:background="@drawable/bg_setting"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.75"
            android:src="@drawable/img_avt" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="MẠNH ĐÀO"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#1032DE"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_affter_tttk"
                android:textSize="15dp"
                android:textColor="#888888"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:background="@drawable/bg_setting"
        android:text="@string/a_admin_qldm"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:background="@drawable/bg_setting"
        android:text="@string/f_settings_vct"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:textColor="#000000"
            android:text="@string/f_settings_nn"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/block_spinner_language"
            android:dropDownVerticalOffset="40dp"
            android:entries="@array/language"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:dropDownWidth="150dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:background="@drawable/bg_setting"
        android:text="@string/f_settings_tg"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:background="@drawable/bg_setting"
        android:text="@string/dangxuat"
        android:textStyle="bold" />


</LinearLayout>
