<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5F5"
    android:orientation="vertical"
    tools:context=".Activity.LoginActitvity">

    <RelativeLayout
        android:id="@+id/topAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1032DE"
        android:gravity="center_horizontal"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        app:layout_constraintBottom_toTopOf="@+id/mainAdd">

        <ImageView
            android:id="@+id/imageArrowback"
            android:layout_width="@dimen/_10pxh"
            android:layout_height="@dimen/_15pxh"
            android:layout_marginLeft="@dimen/_7pxh"
            android:src="@drawable/img_arrowback"
            tools:src="@drawable/img_arrowback" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:text="@string/a_login_nttk"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/tbTaiKhoan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edittext_shadow"
        android:focusableInTouchMode="true"
        android:paddingLeft="10px"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:text="@string/a_login_nmk"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/tbMatKhau"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edittext_shadow"
        android:freezesText="false"
        android:selectAllOnFocus="false"
        android:paddingLeft="10px"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="65dp" />

    <TextView
        android:id="@+id/txvxacnhan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:paddingTop="10dp"
        android:background="@drawable/bg_textview_xacnhan"
        android:text="@string/xacnhan"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="30dp"
        android:text="@string/a_login_qmk"
        android:textAlignment="center"
        android:textSize="15sp" />

</LinearLayout>
