<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5F5"
    tools:context=".fragment.WriteFragment">

    <RelativeLayout
        android:id="@+id/topAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1032DE"
        android:gravity="center_horizontal"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        app:layout_constraintBottom_toTopOf="@+id/mainAdd">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_write_tdl"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/topAdd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_categpry_pl"
                    android:textColor="#565656" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtnExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_categpry_ct" />

                    <RadioButton
                        android:id="@+id/rbtnIncome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_categpry_tn" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/f_write_ntn"
                    android:textColor="#565656" />

                <LinearLayout
                    android:id="@+id/linearLayout13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20sp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#D8F2FD"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_predayin"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="0dp"
                                android:layout_marginEnd="8dp"
                                android:background="@drawable/leftarrow"
                                android:paddingVertical="0dp"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="10dp">

                            </androidx.appcompat.widget.AppCompatButton>

                            <TextView
                                android:id="@+id/calendarView"
                                android:layout_width="200dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:gravity="center_horizontal"
                                android:textColor="@color/black"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_nextdayin"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="0dp"
                                android:background="@drawable/rightarrow"
                                android:paddingVertical="0dp"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="10dp"></androidx.appcompat.widget.AppCompatButton>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"
                    android:text="@string/f_write_nst"
                    android:textColor="#565656" />

                <EditText
                    android:id="@+id/edtAmount"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="10dp"
                    android:hint="0đ"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"
                    android:text="@string/f_write_nd"
                    android:textColor="#565656" />

                <EditText
                    android:id="@+id/edtNote"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"
                    android:text="@string/f_goals_cdm"
                    android:textColor="#565656" />

                <GridView
                    android:id="@+id/gv_writeFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="2"></GridView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnThem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_management_blue"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="18dp"
                    android:text="@string/a_categpry_them"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>