<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5F5"
    android:orientation="vertical"
    tools:context=".Activity.AdminActivity">

    <RelativeLayout
        android:id="@+id/topAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1032DE"
        android:gravity="center_horizontal"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        app:layout_constraintBottom_toTopOf="@+id/mainAdd">

        <ImageView
            android:id="@+id/imageArrowback"
            android:layout_width="@dimen/_10pxh"
            android:layout_height="@dimen/_15pxh"
            android:layout_marginLeft="@dimen/_7pxh"
            android:src="@drawable/img_arrowback"
            tools:src="@drawable/img_arrowback" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADMIN"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txvQLDM"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/a_admin_qldm"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txvQLTK"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/a_admin_qltk"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txvTKCT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_setting"
        android:paddingTop="10dp"
        android:text="@string/a_admin_tkct"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />


</LinearLayout>
